<resources>
    <string name="app_name">chessboard-importer</string>
    <string name="btnSend">Send Photo</string>
    <string name="btnTakePhoto">Take Photo</string>
    <string name="btnImportFromGallery">Import Photo</string>
    <string name="FENTag">Forsyth-Edwards Notation:</string>
    <string name="FENSample">rnbqkbnr/pppppppp/8/8/8/8/PPPPPPPP/RNBQKBNR w KQkq - 0 1</string>
    <string name="appTitle">CHESSBOARD IMPORTER</string>
    <string name="ivLogoDescription">Logo</string>
    <string name="btnGoBack">Go Back</string>
    <string name="btnAccept">Accept</string>
    <string name="ivPhotoDescription">Photo preview</string>
    <string name="tvPhotoGuideline">FIT CHESSBOARD IN FRAME</string>
    <string name="goHome">Go Home</string>
    <string name="copyFEN">Copy FEN</string>
    <string name="connectFEN">Connect</string>
    <string name="btnCopyFEN">copy fen to clipboard</string>
    <string name="btnGoHome">go to home activity</string>
    <string name="btnConnect">connect app to chess engine</string>
    <string name="btnChessboard">go to chessboard activity</string>
    <string name="takePictureButton">take picture button</string>
    <string name="canvasDrawing">canvas drawing</string>
    <string name="btnRetakePhoto">retake photo</string>
    <string name="photoPreview">Photo preview</string>
    <string name="btnAcceptPhoto">accept photo</string>
    <string name="ProgressBarText">Image is uploading and processing, it may take a moment.</string>
    <string name="btnPlayerChoice">Player choice button</string>
    <string name="ErrorMessageApiConnection">Application isn\'t connected to our server, you won\'t be able to upload photos but you will be able to use other functions of application. We are sorry for your trouble.</string>
    <string name="ErrorMessageTitle">Error message</string>
    <string name="ErrorMessagePhotoError">Image isn\'t taken properly please retake photo or import another image.</string>
    <string name="ErrorMessageTimeoutError">Image processing took too much time.</string>
</resources>
